Fixed gap again for the second time

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,6 @@ a {
     }
 
     #imagesSection2 {
-        gap: 8em 3em;
+        gap: 9em 3em;
     }
 }
